# mt19937ar

./: LICENSE  Pipfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
mt19937ar/: __init__.py  mt19937ar.py
tests/: test_genrand_int31.py  test_genrand_int32.py  test_genrand_real1.py  test_genrand_real2.py  test_genrand_real3.py  test_genrand_res53.py
tests/c/: mt19937ar.c
tests/data/: genrand_int31.txt
