[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mt19937ar"
dynamic = ["version"]
authors = [
  { name="zurukumo", email="zurukumo@gmail.com" },
]
description = "mt19937ar for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/zurukumo/mt19937ar"
Issues = "https://github.com/zurukumo/mt19937ar/issues"

[tool.hatch.version]
source = "vcs"
